fix dashboard on iphone top margin

--- a/src/styles/Dashboard.module.css
+++ b/src/styles/Dashboard.module.css
@@ -222,7 +222,7 @@
     grid-template-columns: repeat(2, 1fr);
     gap: 0.5rem;
     padding: 0;
-    margin-top: 100px;
+    margin-top: 200px;
     margin-bottom: 0px;
     width: 100%;
     max-width: 93%;
